<resources>
    <string name="app_name">Architectural Office</string>
    <string name="email">Adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="submit">Zaloguj</string>
    <string name="forgotPassword">Zapomniałem hasła</string>
    <string name="addCustomer">Dodaj klienta</string>
    <string name="remindPassword">Wyślij link do zmiany hasła</string>
    <string name="reminderText">Podaj adres e-mail</string>
    <string name="reminderSite">Odzyskaj hasło</string>
    <string name="actualProjects">Aktualne projekty</string>
    <string name="oldProjects">Nieaktualne projekty</string>
    <string name="projects">Projekty</string>
    <string name="logBuilding">Dziennik budowy</string>
    <string name="clients">Klienci</string>
    <string name="schedules">Terminarz</string>
    <string name="addNewMeeting">Dodaj nowe spotkanie</string>
    <string name="addProject">Dodaj nowy projekt</string>
    <string name="editProjekt">Edycja projektu</string>
    <string name="addClient">Dodaj nowego klienta</string>
    <string name="backToLogin">Powrót do strony logowania</string>
    <string name="newClient">Nowy klient</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="street">Ulica</string>
    <string name="houseNumber">Nr domu</string>
    <string name="flatNumber">Nr mieszkania</string>
    <string name="zipcode">Kod pocztowy</string>
    <string name="city">Miasto</string>
    <string name="numberPhone">Numer telefonu</string>
    <string name="endAddClinet">Dodaj do bazy</string>
    <string name="nextClient">Następny klient</string>
    <string name="backToMenu">Powrót do menu</string>
    <string name="projectName">Nazwa zamierzenia budowlanego</string>
    <string name="newProject">Nowy projekt</string>
    <string name="confine">Obręb</string>
    <string name="plotNumber">Numer działki</string>
    <string name="investorName">Imie inwestora</string>
    <string name="investorSurname">Nazwisko inwestora</string>
    <string name="findClient">Szukaj klienta</string>
    <string name="endAddProject">Zakończ</string>
    <string name="Logout">Wyloguj</string>
    <string name="dismissChange">Odrzuć zmiany</string>
    <string name="acceptChange">Zaakceptuj zmiany</string>
    <string name="actualProject">Aktualny projekt</string>
    <string name="oldProject">Zakończony projekt</string>
    <string name="editProject">Edytuj</string>
    <string name="deleteProject">Usuń projekt</string>
    <string name="plot">Działka</string>
    <string name="call">Zadzwoń do klienta</string>
    <string name="nameSurname">Imię i nazwisko</string>
    <string name="deleteClient">Usuń klienta</string>
    <string name="editClient">Edycja dancyh klienta</string>
    <string name="meetDismiss">Anuluj</string>
    <string name="meetAddNew">Dodaj do kalendarza</string>
    <string name="addNewMeet">Dodaj nowe spotkanie</string>
    <string name="titleMeet">Tytuł:</string>
    <string name="descriptionMeet">Opis:</string>
    <string name="locationMeet">Lokalizacja:</string>



</resources>