<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddNewProject.AddNewProjectActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textAddProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newProject"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<TableRow>
        <EditText
            android:id="@+id/editTextProjectName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/projectName"
            android:inputType="textPersonName"
            android:textAlignment="center" />
</TableRow>
    <TableRow>

        <EditText
            android:id="@+id/editTextZipCodeProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/zipcode"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextCityProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textAlignment="center" />
    </TableRow>
        <TableRow>
        <EditText
            android:id="@+id/editTextStreetProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextHouseNumberProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/houseNumber"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTextFlatNumberProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/flatNumber"
            android:inputType="textPersonName"
            android:textAlignment="center"/>
    </TableRow>
        <TableRow>
        <EditText
            android:id="@+id/editTextConfineProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/confine"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTextPlotNumberProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/plotNumber"
            android:inputType="textPersonName"
            android:textAlignment="center"/>
        </TableRow>
        <TableRow>
        <EditText
            android:id="@+id/editTextInvestorNameProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/investorName"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTextInvestorSurnameProject"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/investorSurname"
            android:inputType="textPersonName"
            android:textAlignment="center"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="45dp">

            <Button
                android:id="@+id/buttonFindClientProject"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_round"
                android:text="@string/findClient"
                android:textColor="@color/black"
                app:backgroundTint="@color/green"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonEndAddProject"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/edit_round"
                android:text="@string/endAddProject"
                android:textColor="@color/black"
                app:backgroundTint="@color/green"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_marginEnd="75dp"
            android:layout_marginStart="75dp">
            <Button
                android:id="@+id/buttonBackToMenuClient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="25dp"
                android:layout_marginEnd="150dp"
                android:gravity="center"
                android:text="@string/backToMenu"
                android:background="@drawable/edit_round"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange"
                tools:ignore="MissingConstraints" />
        </TableRow>
    </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>