<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonProjects"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:text="@string/projects"
            android:textColor="@color/black"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/buttonClients"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:text="@string/clients"
            android:textColor="@color/black"
            app:backgroundTint="@color/green" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_margin="20dp">

                <Button
                    android:id="@+id/buttonlogBuilding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_round"
                    android:text="@string/logBuilding"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/green" />

                <Button
                    android:id="@+id/buttonSchedules"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_round"
                    android:text="@string/schedules"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/green" />

            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/buttonAddSchdules"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/edit_round"
            android:text="@string/addNewMeeting"
            android:textColor="@color/black"
            app:backgroundTint="@color/green" />


        <Button
            android:id="@+id/buttonAddProject"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:text="@string/addProject"
            android:textColor="@color/black"
            app:backgroundTint="@color/green" />


        <Button
            android:id="@+id/buttonAddClient"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:text="@string/addClient"
            android:textColor="@color/black"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginStart="85dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_round"
            android:text="@string/Logout"
            android:textColor="@color/black"
            app:backgroundTint="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>